# Yuna-Lia

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_bot.cmd
content/personas/lia/: annoyed.txt  casual.txt  chaos.txt  disrespect.txt  drama.txt  existential.txt  flirting.txt  food.txt  fun.txt  gaming.txt  gossip.txt  mature.txt  scripts.txt  shared_topics.txt  sleepy.txt  yuna_conflict.txt
content/personas/nsfw/: README.md  nsfw_after_dark_reactions.txt  nsfw_aftercare_and_softness.txt  nsfw_powerplay_and_teasing.txt
content/personas/shared/: argument_starters.txt  conversation_starters.txt  duo_events.txt  rare_events.txt  scripts.txt
docs/: architecture_overview.md  content_navigation.md  deployment_guide.md  duo_writer_bible.md  hosting.md  lia_writer_bible.md  module_guide.md  quickstart.md  roadmap.md  trigger_inventory.txt  writer_moods.md  writer_subjects.md  yuna_writer_bible.md
scripts/: cleanup_workspace.ps1  content_coverage_report.py  create_case.ps1  dev_runner.ps1  expand_theme_assets.py  expand_theme_minimums.py  export_trigger_inventory.py  format_trigger_headers.ps1  reorganize_content_library.py  sync_writer_profiles.ps1
src/yuna_lia/: __init__.py  app_runtime.py  birthdays.py  bot.py  config.py  llm.py  logging_store.py  lore.py  memory.py  mood.py  premium.py  runtime.py  scenarios.py  typing_sim.py
tests/: test_birthdays.py  test_config.py  test_content_minimums.py  test_content_quality.py  test_core.py  test_main_entrypoint.py  test_persona_content.py  test_persona_engine.py  test_progression_and_welcomes.py
(+87 files in other folders)
